added pts to src

--- a/src/code.ipynb
+++ b/src/code.ipynb
@@ -445,9 +445,9 @@
     "    return X_train_scaled, Y_train_scaled, X_test_scaled, scaler\n",
     "\n",
     "# https://stackoverflow.com/questions/20410312/\n",
-    "# lagged data structure\n",
-    "in_days = 5\n",
-    "out_days = 1\n",
+    "# lagged data structure (sliding window)\n",
+    "in_days = 5                             # take data for in_days\n",
+    "out_days = 1                            # output predictions for out_days\n",
     "num_cols = in_days+out_days\n",
     "num_X_cols = in_days\n",
     "lagged_data = pd.concat([data['Adj Close'].shift(i) for i in range(num_cols,0,-1)], axis=1).dropna()\n",
@@ -753,6 +753,18 @@
     "plt.savefig(os.path.join(results_dir_path,'train.png'), bbox_inches='tight', facecolor=\"w\")\n",
     "                                                                                    # facecolor: jupyter problem\n",
     "                                                                                    # https://stackoverflow.com/questions/52371499"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initialization (here, xavier uniform) has a significant effect.\n",
+    "\n",
+    "Also tried\n",
+    "- dropout (num_layers=2, probability=0.2)\n",
+    "- weight_decay"
    ]
   },
   {
