--- a/src/rnn.ipynb
+++ b/src/rnn.ipynb
@@ -572,6 +572,7 @@
    "source": [
     "def train(num_epochs):\n",
     "    dict_losses = {}\n",
+    "    print_width = max(1, num_epochs/10)\n",
     "\n",
     "    for epoch in range(num_epochs):\n",
     "        train_loss = 0\n",
@@ -594,7 +595,7 @@
     "\n",
     "        dict_losses[epoch] = train_loss\n",
     "\n",
-    "        if epoch%10==0:\n",
+    "        if epoch%print_width==0:\n",
     "            print(\"Epoch:\", epoch, \"\\tLoss:\", train_loss)\n",
     "        \n",
     "    return dict_losses"
@@ -602,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -610,30 +611,33 @@
      "output_type": "stream",
      "text": [
       "Epoch: 0 \tLoss: 0.38045068364590406\n",
-      "Epoch: 10 \tLoss: 0.2185644535929896\n",
       "Epoch: 20 \tLoss: 0.1643272100482136\n",
-      "Epoch: 30 \tLoss: 0.11479775194311514\n",
       "Epoch: 40 \tLoss: 0.07112567740841769\n",
-      "Epoch: 50 \tLoss: 0.03705220084520988\n",
       "Epoch: 60 \tLoss: 0.016120309301186353\n",
-      "Epoch: 70 \tLoss: 0.00726420422870433\n",
       "Epoch: 80 \tLoss: 0.004921335501421709\n",
-      "Epoch: 90 \tLoss: 0.004534480556685594\n",
       "Epoch: 100 \tLoss: 0.004489226567557125\n",
-      "Epoch: 110 \tLoss: 0.004481677103058246\n",
       "Epoch: 120 \tLoss: 0.00447647227338166\n",
-      "Epoch: 130 \tLoss: 0.004470938142276282\n",
       "Epoch: 140 \tLoss: 0.004464988544896187\n",
-      "Epoch: 150 \tLoss: 0.004458642349163711\n",
       "Epoch: 160 \tLoss: 0.004451893318673683\n",
-      "Epoch: 170 \tLoss: 0.004444736505320179\n",
-      "Epoch: 180 \tLoss: 0.004437163158854673\n",
-      "Epoch: 190 \tLoss: 0.004429164078601389\n"
+      "Epoch: 180 \tLoss: 0.004437163158854673\n"
      ]
     }
    ],
    "source": [
     "dict_losses = train(200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_main = '../results/lstm/'\n",
+    "pathlib.Path(results_main).mkdir(exist_ok=True, parents=True)\n",
+    "\n",
+    "results_in_out = os.path.join(results_main, f'in={in_days}_out={out_days}')\n",
+    "pathlib.Path(results_in_out).mkdir(exist_ok=True, parents=True)"
    ]
   },
   {
@@ -663,7 +667,7 @@
     "fig.set_size_inches(6,4)\n",
     "fig.set_dpi(100)\n",
     "\n",
-    "plt.savefig('../results/training.png', bbox_inches='tight', facecolor=\"w\")"
+    "plt.savefig(os.path.join(results_in_out,'loss.png'), bbox_inches='tight', facecolor=\"w\")"
    ]
   },
   {
@@ -690,7 +694,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_dir_path = f'../results/in={in_days}_out={out_days}'\n",
+    "results_dir_path = f'../results/rnn/in={in_days}_out={out_days}'\n",
     "pathlib.Path(results_dir_path).mkdir(exist_ok=True, parents=True)"
    ]
   },
@@ -721,7 +725,7 @@
     "\n",
     "fig = plt.figure(figsize=(6,3), dpi=140)\n",
     "actual_and_pred.plot(ax=plt.gca())\n",
-    "plt.savefig(os.path.join(results_dir_path,'test.png'), bbox_inches='tight', facecolor=\"w\")"
+    "plt.savefig(os.path.join(results_in_out,'test.png'), bbox_inches='tight', facecolor=\"w\")"
    ]
   },
   {
@@ -750,7 +754,7 @@
     "\n",
     "fig = plt.figure(figsize=(6,3), dpi=140)\n",
     "train_Y_df.plot(ax=plt.gca())\n",
-    "plt.savefig(os.path.join(results_dir_path,'train.png'), bbox_inches='tight', facecolor=\"w\")\n",
+    "plt.savefig(os.path.join(results_in_out,'train.png'), bbox_inches='tight', facecolor=\"w\")\n",
     "                                                                                    # facecolor: jupyter problem\n",
     "                                                                                    # https://stackoverflow.com/questions/52371499"
    ]
@@ -760,26 +764,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Initialization (here, xavier uniform) has a significant effect.\n",
+    "### Remarks\n",
     "\n",
-    "Also tried\n",
-    "- dropout (num_layers=2, probability=0.2)\n",
-    "- weight_decay"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "References:\n",
-    "- https://medium.com/swlh/a-technical-guide-on-rnn-lstm-gru-for-stock-price-prediction-bce2f7f30346\n",
-    "- https://www.kaggle.com/code/rodsaldanha/stock-prediction-pytorch/notebook\n",
-    "- Torch:\n",
-    "    - RNN: https://www.youtube.com/watch?v=Gl2WXLIMvKA\n",
-    "    - https://blog.floydhub.com/a-beginners-guide-on-recurrent-neural-networks-with-pytorch/\n",
-    "    - https://towardsdatascience.com/building-rnn-lstm-and-gru-for-time-series-using-pytorch-a46e5b094e7b\n",
-    "    - https://pytorch.org/docs/stable/generated/torch.nn.RNN.html\n"
+    "- **Significant** improvements from the following (in all models)\n",
+    "    - Initialization (here, xavier uniform) has a significant effect\n",
+    "    - FC layer: `(sequence_len(=in_days) * hidden_size) -> (out_days)` (instead of `hidden_size -> out_days`)\n",
+    "    - RMSProp in LSTM\n",
+    "<br></br>\n",
+    "- For `in=10, out=5`, LSTM with one-fourth the hidden dimension works\n",
+    "\n",
+    "- Also tried (did not end up using)\n",
+    "    - dropout (num_layers=2, probability=0.2)\n",
+    "    - weight_decay\n",
+    "    - FC layer (hidden_size) -> (out_days)"
    ]
   }
  ],
