modified rnn md

--- a/src/rnn.ipynb
+++ b/src/rnn.ipynb
@@ -770,7 +770,7 @@
     "    - Initialization (here, xavier uniform) has a significant effect\n",
     "    - FC layer: `(sequence_len(=in_days) * hidden_size) -> (out_days)` (instead of `hidden_size -> out_days`)\n",
     "    - RMSProp in LSTM\n",
-    "<br></br>\n",
+    "\n",
     "- For `in=10, out=5`, LSTM with one-fourth the hidden dimension works\n",
     "\n",
     "- Also tried (did not end up using)\n",
@@ -796,7 +796,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.4 (tags/v3.9.4:1f2e308, Apr  6 2021, 13:40:21) [MSC v.1928 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
