--- a/src/rnn.ipynb
+++ b/src/rnn.ipynb
@@ -516,11 +516,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# https://pytorch.org/docs/stable/generated/torch.nn.RNN.html; more links at the end\n",
-    "# https://www.kaggle.com/code/rodsaldanha/stock-prediction-pytorch/notebook\n",
-    "\n",
-    "# https://www.youtube.com/watch?v=Gl2WXLIMvKA\n",
-    "\n",
     "class StockRNN(nn.Module):\n",
     "    def __init__(self, input_size, output_size, hidden_size, num_layers, sequence_length):\n",
     "        super().__init__()\n",
@@ -768,11 +763,13 @@
     "\n",
     "- **Significant** improvements from the following (in all models)\n",
     "    - Initialization (here, xavier uniform) has a significant effect\n",
+    "        - Does **not** affect `rnn-scratch`\n",
     "    - FC layer: `(sequence_len(=in_days) * hidden_size) -> (out_days)` (instead of `hidden_size -> out_days`)\n",
     "    - RMSProp in LSTM\n",
-    "\n",
-    "- For `in=10, out=5`, LSTM with one-fourth the hidden dimension works\n",
-    "\n",
+    "<br></br>\n",
+    "- For `in=10, out=5`, LSTM with `hidden_size`=128 works\n",
+    "    - `rnn-scratch` appears to works better, with just 32\n",
+    "<br></br>\n",
     "- Also tried (did not end up using)\n",
     "    - dropout (num_layers=2, probability=0.2)\n",
     "    - weight_decay\n",
