--- a/src/lstm.ipynb
+++ b/src/lstm.ipynb
@@ -167,11 +167,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# https://pytorch.org/docs/stable/generated/torch.nn.RNN.html; more links at the end\n",
-    "# https://www.kaggle.com/code/rodsaldanha/stock-prediction-pytorch/notebook\n",
-    "\n",
-    "# https://www.youtube.com/watch?v=Gl2WXLIMvKA\n",
-    "\n",
     "class StockLSTM(nn.Module):\n",
     "    def __init__(self, input_size, output_size, hidden_size, num_layers, sequence_length, dropout=0):\n",
     "        super().__init__()\n",
@@ -421,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.4 (tags/v3.9.4:1f2e308, Apr  6 2021, 13:40:21) [MSC v.1928 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
